istio/destinationRule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-destinationrule
  namespace: test
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN

---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: productpage
  namespace: test
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
